--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trellu",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Gerenciado de projetos",
   "author": "Valmisson Grizorte - valmisson.com",
   "license": "MIT",
@@ -9,12 +9,20 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "start:dev": "sirv public --single --dev",
+    "lint": "eslint src/**"
   },
   "dependencies": {
     "svelte": "^3.12.1"
   },
   "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-svelte3": "^2.7.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.21.4",
     "rollup-plugin-commonjs": "^10.1.0",
