--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trellu",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Gerenciado de projetos",
   "author": "Valmisson Grizorte - valmisson.com",
   "license": "MIT",
@@ -29,6 +29,7 @@
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
     "rollup": "^1.21.4",
+    "rollup-plugin-alias": "^2.0.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^1.0.3",
     "rollup-plugin-node-resolve": "^5.2.0",
