--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trellu",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "description": "Gerenciado de projetos",
   "author": "Valmisson Grizorte - valmisson.com",
   "license": "MIT",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@spaceavocado/svelte-router": "^1.0.16",
+    "dexie": "^2.0.4",
     "normalize.css": "^8.0.1",
     "sortablejs": "^1.10.1",
     "svelte": "^3.12.1"
