--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^3.16.4"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "eslint": "^6.7.2",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
