--- a/package.json
+++ b/package.json
@@ -14,32 +14,33 @@
   },
   "dependencies": {
     "@spaceavocado/svelte-router": "^1.0.16",
-    "dexie": "^2.0.4",
+    "dexie": "^3.0.3",
     "normalize.css": "^8.0.1",
     "sortablejs": "^1.10.1",
-    "svelte": "^3.16.4"
+    "svelte": "^3.38.1"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10",
-    "eslint": "^6.7.2",
-    "eslint-config-standard": "^14.1.0",
+    "@rollup/plugin-alias": "^3.1.2",
+    "cssnano": "^5.0.2",
+    "eslint": "^7.25.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-svelte3": "^2.7.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "npm-run-all": "^4.1.5",
-    "postcss-import": "^12.0.1",
+    "postcss": "^8.2.13",
+    "postcss-import": "^14.0.1",
     "postcss-preset-env": "^6.7.0",
-    "rollup": "^1.27.13",
-    "rollup-plugin-alias": "^2.2.0",
+    "rollup": "^2.46.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-workbox-build": "^0.2.0",
-    "sirv-cli": "^0.4.5"
+    "sirv-cli": "^1.0.11"
   }
 }
