--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Valmisson Grizorte - valmisson.com",
   "license": "MIT",
   "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "autobuild": "rollup -c -w --bundleConfigAsCjs",
     "dev": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --single --dev",
@@ -14,33 +14,33 @@
   },
   "dependencies": {
     "@spaceavocado/svelte-router": "^1.0.16",
-    "dexie": "^3.2.0",
+    "dexie": "^4.0.8",
     "normalize.css": "^8.0.1",
-    "sortablejs": "^1.14.0",
-    "svelte": "^3.46.4"
+    "sortablejs": "^1.15.0",
+    "svelte": "^4.2.19"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.9",
-    "cssnano": "^5.0.16",
-    "eslint": "^8.8.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "cssnano": "^7.0.6",
+    "eslint": "8.57.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^17.10.3",
+    "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-svelte3": "^3.4.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.6",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^7.3.1",
-    "rollup": "^2.67.0",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "postcss": "^8.4.21",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.0.5",
+    "rollup": "^4.23.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-workbox-build": "^0.2.0",
+    "rollup-plugin-workbox": "^8.1.0",
     "sirv-cli": "^2.0.2"
   }
 }
