--- a/package.json
+++ b/package.json
@@ -20,18 +20,15 @@
     "svelte": "^4.2.19"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "cssnano": "^7.0.6",
-    "eslint": "8.57.1",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^17.10.3",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint": "^9.11.1",
+    "eslint-plugin-svelte": "^2.44.1",
+    "globals": "^15.10.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-import": "^16.1.0",
